stops truncating long titles; closes #32

--- a/app/pages/Profile/frags/hero.css
+++ b/app/pages/Profile/frags/hero.css
@@ -12,13 +12,9 @@
   }
 
   & .cp-hero-heading {
-    /* typography */
     @mixin display;
     @mixin font-xxl;
-    /* handle long titles */
-    @mixin overflow-ellipsis;
     line-height: 1.25;
-    height: 1.25em;
   }
 
   & .cp-hero-inner {
